editing alignment issues

--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -44,6 +44,7 @@ div.balance{
 } */
 div.transactionsPage {
   flex-direction: row;
+  justify-content: center;
 }
 div.transactionForm{
   border-style: solid;
